[package]
name = "atcpip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.82", features = ["backtrace", "std"]  }
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1", features = ["time", "sync", "rt-multi-thread", "signal", "macros", "parking_lot"] }
env_logger = "0.11.3"
log = "0.4.21"
once_cell = "1.19.0"
pnet = "0.34.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
bitfield = "0.15.0"
rand = "0.8.5"
rstest = "0.19.0"
